################################################################################
# CMake
################################################################################
cmake_minimum_required(VERSION 3.5)
project(ros_joy_keyboard)


################################################################################
# Packages
################################################################################
find_package(catkin REQUIRED COMPONENTS
  roscpp
  std_msgs

)

################################################################################
# Declare ROS messages, services and actions
################################################################################

################################################################################
# Declare ROS dynamic reconfigure parameters
################################################################################

################################################################################
# Catkin specific configuration
################################################################################

catkin_package(
  INCLUDE_DIRS include
  CATKIN_DEPENDS roscpp  std_msgs
)
################################################################################
# Build
################################################################################
include_directories(
  include
  ${catkin_INCLUDE_DIRS}
  ${yaml_cpp_INCLUDE_DIRS}
)

################################################################################
# LIBRARIES
################################################################################

################################################################################
# EXECUTABLE
################################################################################

add_executable(ros_joy_keyboard src/ros_joy_keyboard.cpp)
target_link_libraries(ros_joy_keyboard ${catkin_LIBRARIES})


