<?xml version="1.0"?>
<package format="2">
  <name>ros_joy_keyboard</name>
  <version>0.0.0</version>
  <description>The ros_joy_keyboard package</description>

  <maintainer email="arirang@kakao.com">chris20</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>s
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
